# melwalletd

./: Cargo.toml  README.md  config.yaml  flake.nix
.cargo/: config
.github/workflows/: test-and-build.yml
src/: acidjson.rs  cli.rs  database.rs  main.rs  multi.rs  multiwallet.rs  secrets.rs  signer.rs  speedup.rs  state.rs  wallet_utils.rs  walletdata.rs
src/database/: pool.rs
src/protocol/: legacy.rs  mod.rs  protocol.rs  rpc.rs
