[package]
name = "melwalletd"
version = "0.6.3-alpha.1"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

description = "official themelio wallet daemon"
license = "MPL-2.0"
repository = "https://github.com/themeliolabs/melwalletd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.87"
features = ["arbitrary_precision"]

[patch.crates-io]
# themelio-nodeprot={path="../themelio-nodeprot"}

[dependencies]
acidjson = "0.1.2"
anyhow = "1.0.66"
base32 = "0.4.0"
binary-search = "0.1.2"
atomicwrites = "0.3.1"
crypto_api = "0.2.2"
crypto_api_chachapoly = "0.5.0"
dashmap = "5.4.0"
ed25519-dalek = "1.0.1"
fastrand = "1.8.0"
getrandom = "0.2.8"
hex = "0.4.3"
http-types = "2.12.0"
log = "0.4.17"
libc = "0.2.137"
lru = "0.7.8"
once_cell = "1.16.0"
parking_lot = "0.12.1"
rust-argon2 = "1.0.0"
scopeguard = "1.1.0"
secrecy = "0.8.0"
serde_with = "1.14.0"
smol = "1.2.5"
stdcode = "0.1.10"
clap = { version = "3.2.23", features = ["derive"] }
smol-timeout = "0.6.0"
smolscale= "0.3.43"
tap = "1.0.1"
# themelio-bootstrap = { git = "https://github.com/themeliolabs/themelio-bootstrap", branch = "use-themelio-structs-0.3-beta" }
# melprot = { git = "https://github.com/themeliolabs/themelio-nodeprot", branch = "use-themelio-structs-0.3-beta" }
# melnet = "0.2.27"

# themelio-stf = "0.11.12"
# themelio-structs= "0.3.0-beta.6"
tide = "0.16.0"
tmelcrypt = "0.2.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde_yaml = "0.8.26"
display_json = "0.2.1"
terminal_size = "0.2.1"
nanorpc = "0.1.12"
async-trait = "0.1.58"
route-recognizer = "0.3.1"
futures = "0.3.25"
melwalletd-prot = "0.3.0"
bytes = "1.4.0"
melstructs = "0.3.0"
melprot = "0.13.0"
melvm = "0.1.0"
melbootstrap = "0.8.0"
env_logger = "0.10.0"

[dev-dependencies]

# prevent key derivation from being ridiculously slow
[profile.dev.package.rust-argon2]
opt-level = 3 

[profile.release]
panic='abort'
